test/bad/6.cc
#include <string>

using std::string;

int main()
{
    string x, y, z;
    x = 4 + x;
}